harish/istio-mtls.yml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: istio-mtls
  namespace: istio-system
spec:
  mtls:
    mode: STRICT
