harish/igloo-gateway-mc.yml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: igloo-gateway-mc
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - igloo.mc.cde.demo.pe
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: demo-cde-mc-cert
      mode: MUTUAL
