harish/mc-destinationrule-egress-gateway-mtls.yml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: mc-destinationrule-egress-gateway-mtls
  namespace: istio-system
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: nginx
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
      portLevelSettings:
      - connectionPool:
          http:
            useClientProtocol: true
        port:
          number: 443
        tls:
          mode: ISTIO_MUTUAL
          sni: igloo.mc.noncde.demo.pe
