harish/mc-destinationrule-egress-gateway-tcp-tls-leg1.yml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: mc-destinationrule-egress-gateway-tcp-tls-leg1
  namespace: istio-system
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: tcp-tls
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
      portLevelSettings:
      - port:
          number: 443
        tls:
          mode: ISTIO_MUTUAL
          sni: mngs.mtf.connexswitch.client.f5
