harish/mc-serviceentry-mtls.yml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: mc-serviceentry-mtls
  namespace: istio-system
spec:
  hosts:
  - igloo.mc.noncde.demo.pe
  ports:
  - name: http
    number: 80
    protocol: HTTP
  - name: https
    number: 443
    protocol: TLS
  resolution: DNS
